updated email address in README

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 GPU_Suzuki - GPU (CUDA) implementation of a Trotter-Suzuki solver
-(c) 2010 by Armand Niederberger <Armand.Niederberger@opfocus.net>
+(c) 2010 by Armand Niederberger <armand@armandniederberger.com>
 
 Version 0.1 alpha:
 Basic functionality. Now debugging.
